# PaperMind

./: .env.example  .gitignore  CLAUDE.md  README.md  arch.md  papers.schema.json  pyproject.toml
src/agents/: base.py  explorer.py  polisher.py  researcher.py  reviewer.py  writer.py
src/deepresearch/: __init__.py  artifact_writer.py  arxiv_client.py  arxiv_search.py  config.py  database.py  dedup.py  diversifier.py  llm_client.py  main.py  models.py  orchestrator.py  search_client.py  text_utils.py  worker.py
src/evaluate/: __init__.py  __main__.py
src/mcp_servers/: ddg_search.py  rag_retrieval.py
src/orchestrator/: graph.py  main_agent.py  nodes.py  nodes_writing.py  state.py
src/outliner/: __init__.py  chunker.py  db.py  graph.py  indexer.py  llm.py  main.py  nodes.py  pdf_converter.py  prompts.py  retriever.py  review_orchestrator.py  section_writer.py  state.py  writer_main.py  writer_prompts.py
src/papermind/: __init__.py  main.py  pdf_export.py
src/rag/: indexer.py  pdf_extractor.py  retriever.py
src/shared/: config.py  database.py  dedup.py  llm.py  models.py
