[project]
name = "papermind"
version = "0.1.0"
description = "Automated literature survey + outline generation (Claude Code + LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
deepresearch = "deepresearch.main:main"
outline = "outliner.main:main"
PM = "papermind.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepresearch", "src/outliner", "src/papermind"]
